kubernetes/base/spring-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring
spec:
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
      - name: spring
        image: spring:dev
        ports:
        - containerPort: 8082
      imagePullSecrets:
        - name: gitlab
