kubernetes/base/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresqldb
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
