kubernetes/base/spring-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring
  annotations:
    cloud.google.com/backend-config: '{"ports": { "8082":"health-check"}}'
spec:
  selector:
    app: spring
  ports:
    - port: 8082
